5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1635_2703.log
== TEST (2019-04-08 14:17:43) 
-- CODE:
idade = float(input("idade: "))

if (idade => 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- ERROR:
File "XXXX", line 3
    if (idade => 18):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:17:59) 
-- CODE:
idade = float(input("idade: "))

if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:18:07) 
-- CODE:
idade = float(input("idade: "))

if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- EXECUTION TIME:
0.131641
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
